add full width resource card to basic page

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.yml
@@ -348,3 +348,50 @@ resources:
       filetype: PDF
       desc: null
       target: null
+full_resources:
+  title: Medical Appointment Forms
+  text: If directed, download and complete these forms to prepare for your visit.
+  full: true
+  items:
+    - url: '#'
+      title: Request for Service
+      filetype: PDF
+      desc: Use this form to ipsum dolor sit amet, consectetur adipisicing elit. Commodi, sed odit non, impedit quo quaerat iusto blanditiis, adipisci deserunt sit voluptates distinctio.
+      target: null
+    - url: '#'
+      title: Medical History Questionnaire
+      filetype: PDF
+      desc: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sunt illum facilis laudantium nemo doloremque earum, eaque distinctio recusandae itaque debitis veritatis esse quos minima rerum cumque dignissimos laborum.
+      target: null
+    - url: '#'
+      title: Respirator Questionnaire 
+      filetype: PDF
+      desc: Use this form to ipsum dolor sit amet, consectetur adipisicing elit. Commodi, sed odit non, impedit quo quaerat iusto blanditiis, adipisci deserunt sit voluptates distinctio.
+      target: null
+    - url: '#'
+      title: Medical Respirator Questionnaire - Short Form
+      filetype: PDF
+      desc: null
+      target: null
+    - url: '#'
+      title: Audiometric History Form
+      filetype: PDF
+      desc: null
+      target: null
+    - url: '#'
+      title: Medical History Questionnaire
+      filetype: PDF
+      desc: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sunt illum facilis laudantium nemo doloremque earum, eaque distinctio recusandae itaque debitis veritatis esse quos minima rerum cumque dignissimos laborum.
+      target: null
+    - url: '#'
+      title: Respirator Questionnaire 
+      filetype: PDF
+      desc: Use this form to ipsum dolor sit amet, consectetur adipisicing elit. Commodi, sed odit non, impedit quo quaerat iusto blanditiis, adipisci deserunt sit voluptates distinctio.
+      target: null
+    - url: '#'
+      title: Medical Respirator Questionnaire - Short Form
+      filetype: PDF
+      desc: null
+      target: null
+
+
