--- a/composer.json
+++ b/composer.json
@@ -82,6 +82,7 @@
         "drupal/token": "^1.5",
         "drupal/twig_field_value": "^1.2",
         "drupal/twig_tweak": "^2.4",
+        "drupal/views_data_export": "^1.0@beta",
         "drupal/views_taxonomy_term_name_depth": "^3.3",
         "drupal/workbench": "^1.1",
         "drupal/workbench_access": "^1.0@beta",
@@ -152,6 +153,9 @@
             },
             "drupal/migrate_devel": {
                 "Test": "https://www.drupal.org/files/issues/2018-10-08/migrate_devel-drush9-2938677-6.patch"
+            },
+            "drupal/csv_serialization": {
+                "TypeError in CsvEncoder.php (https://www.drupal.org/project/csv_serialization/issues/3120645)": "https://www.drupal.org/files/issues/2020-03-18/fix-typeerror-3120645-2.patch"
             }
         }
     }
