--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -21,6 +21,7 @@ module:
   config_update_ui: 0
   content_moderation: 0
   contextual: 0
+  csv_serialization: 0
   ctools: 0
   datetime: 0
   dblog: 0
@@ -76,6 +77,7 @@ module:
   rdf: 0
   readonly_field_widget: 0
   redirect: 0
+  rest: 0
   rh_node: 0
   rh_taxonomy: 0
   schema_medical_business: 0
@@ -104,6 +106,7 @@ module:
   unified_twig_ext: 0
   update: 0
   user: 0
+  views_data_export: 0
   views_taxonomy_term_name_depth: 0
   views_ui: 0
   workbench: 0
