Display ratings or review in a link depending on if there are comments.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.yml
@@ -3,6 +3,7 @@ lead_title: "Medical Director, Stroke Program"
 type: 'Doctor'
 rating: 4.9
 rating_icon: "star.svg"
+rating_comments: false
 review_amt: 36
 provider_video:
   type: video
