--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
@@ -15,6 +15,7 @@ lead_title: "Medical Director, Stroke Program"
 type: 'Nurse Practitioner'
 rating: 4.9
 rating_icon: "star.svg"
+rating_comments: true
 review_amt: 36
 provider_video:
   type: video
