--- a/config/sites/default/core.entity_form_display.paragraph.rich_text.default.yml
+++ b/config/sites/default/core.entity_form_display.paragraph.rich_text.default.yml
@@ -4,21 +4,45 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.rich_text.field_rich_text
+    - field.field.paragraph.rich_text.field_rich_text_left_layout
     - paragraphs.paragraphs_type.rich_text
   module:
+    - field_group
     - text
+third_party_settings:
+  field_group:
+    group_layout:
+      children:
+        - field_rich_text_left_layout
+      parent_name: ''
+      weight: 0
+      format_type: fieldset
+      region: content
+      format_settings:
+        description: 'Optionally set this component to be left-aligned instead of centered. By default, the component is centered.'
+        required_fields: true
+        id: ''
+        classes: ''
+      label: Layout
 id: paragraph.rich_text.default
 targetEntityType: paragraph
 bundle: rich_text
 mode: default
 content:
   field_rich_text:
-    weight: 0
+    weight: 1
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+    region: content
+  field_rich_text_left_layout:
+    weight: 2
+    settings:
+      display_label: false
+    third_party_settings: {  }
+    type: boolean_checkbox
     region: content
 hidden:
   created: true
