modify recognition card to allow a description to display with an image

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/recognition-card/recognition-card~text-img.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/recognition-card/recognition-card~text-img.yml
@@ -1,5 +1,4 @@
 image:
   src: "../../images/award-1.jpg"
   alt: "Healthgrades America's 100 best hospitals, 2017-2019"
-title: null
-desc: null
+desc: "Healthgrades America's 100 best hospitals, 2017-2019"
