--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.yml
@@ -135,6 +135,7 @@ recognitionItems:
   - image:
       src: "../../images/award-2.png"
       alt: "US News & World Report, Best National Hospital - Pulmonology"
+    desc: US News & World Report, Best National Hospital - Pulmonology
 file: 
   image:
     src: '../../images/2019-Tower-CHNA-01.png'
