--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_doctors.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_doctors.yml
@@ -217,6 +217,8 @@ process:
   - plugin: towerhealth_entity_ref_values
     source: '@_hospital_aff'
 
+  field_profile_appointment_link: appointment_link
+
   type:
     plugin: default_value
     default_value: profile
