--- a/config/sites/default/core.entity_form_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_form_display.node.profile.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.profile.field_location_ref
     - field.field.node.profile.field_medical_specialties_ref
     - field.field.node.profile.field_metatags
+    - field.field.node.profile.field_profile_appointment_link
     - field.field.node.profile.field_profile_board_certified
     - field.field.node.profile.field_profile_education
     - field.field.node.profile.field_profile_employment_type
@@ -94,6 +95,7 @@ third_party_settings:
         - field_profile_last_name
         - field_profile_professional_title
         - field_profile_job_title
+        - field_profile_appointment_link
         - field_profile_npi
         - field_profile_practid
         - field_profile_type
@@ -231,6 +233,16 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
+  field_profile_appointment_link:
+    weight: 6
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
+    region: content
   field_profile_board_certified:
     weight: 13
     settings:
@@ -252,7 +264,7 @@ content:
     third_party_settings: {  }
     region: content
   field_profile_employment_type:
-    weight: 9
+    weight: 10
     settings:
       label: above
       formatter_type: null
@@ -284,7 +296,7 @@ content:
     type: readonly_field_widget
     region: content
   field_profile_gender:
-    weight: 10
+    weight: 11
     settings:
       label: above
       formatter_type: null
@@ -313,7 +325,7 @@ content:
     type: readonly_field_widget
     region: content
   field_profile_languages:
-    weight: 11
+    weight: 12
     settings:
       label: above
       formatter_type: null
@@ -347,7 +359,7 @@ content:
     type: readonly_field_widget
     region: content
   field_profile_npi:
-    weight: 6
+    weight: 7
     settings:
       label: above
       formatter_type: null
@@ -357,7 +369,7 @@ content:
     type: readonly_field_widget
     region: content
   field_profile_practid:
-    weight: 7
+    weight: 8
     settings:
       label: above
       formatter_type: null
@@ -387,7 +399,7 @@ content:
     type: readonly_field_widget
     region: content
   field_profile_type:
-    weight: 8
+    weight: 9
     settings:
       label: above
       formatter_type: null
