--- a/config/sites/default/core.entity_view_display.node.profile.search_index.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.search_index.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.profile.field_location_ref
     - field.field.node.profile.field_medical_specialties_ref
     - field.field.node.profile.field_metatags
+    - field.field.node.profile.field_profile_appointment_link
     - field.field.node.profile.field_profile_board_certified
     - field.field.node.profile.field_profile_education
     - field.field.node.profile.field_profile_employment_type
@@ -128,6 +129,7 @@ content:
     third_party_settings: {  }
 hidden:
   field_metatags: true
+  field_profile_appointment_link: true
   field_profile_board_certified: true
   field_profile_epic_id: true
   field_profile_first_name: true
