Allow for address2 to display along with local info.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.yml
@@ -1,7 +1,7 @@
 type: "Hospital"
 name: "Reading Hospital"
 address_1: "420 S. Fifth Avenue"
-address_2: "West Reading, PA 19611"
+address_local: "West Reading, PA 19611"
 directions:
   link: "/"
   button_icon: "th-find-hospital.svg"
