--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.yml
@@ -5,7 +5,8 @@ location:
   details:
     name: "McGlinn Cancer Institute"
     address1: "420 S. Fifth Avenue"
-    address2: "West Reading, PA 19611"
+    address2: "Suite 400"
+    address_local: "West Reading, PA 19611"
     phone: "484-555-5555"
     fax: "484-555-5556"
     hours: true
