Enable the doctor to disable the find a doctor link.

--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_locations.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_locations.yml
@@ -53,6 +53,10 @@ process:
 
   field_location_fax: fax_number
 
+  field_location_doctor_link:
+  - plugin: default_value
+    default_value: 0
+
   _location_type:
     - plugin: towerhealth_lookup_taxonomy_term
       lookup_field: name
