--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.yml
@@ -61,6 +61,7 @@ hours:
       hours: "8 a.m. - 8 p.m."
     - title: "Sunday"
       hours: "Closed"
+hide_cta: false
 cta_list:
   - text: "Doctors at this Location"
     url: "/"
