--- a/config/sites/default/core.entity_view_display.node.location.search_index.yml
+++ b/config/sites/default/core.entity_view_display.node.location.search_index.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.location.field_location_card_desc
     - field.field.node.location.field_location_card_image
     - field.field.node.location.field_location_components
+    - field.field.node.location.field_location_doctor_link
     - field.field.node.location.field_location_fax
     - field.field.node.location.field_location_geo
     - field.field.node.location.field_location_hours
@@ -121,6 +122,7 @@ hidden:
   field_location_card_cta: true
   field_location_card_desc: true
   field_location_card_image: true
+  field_location_doctor_link: true
   field_location_geo: true
   field_location_id: true
   field_location_image: true
