Add phone and fax back into teaser small.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser--small/location-teaser--small.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser--small/location-teaser--small.yml
@@ -4,11 +4,8 @@ address_rows:
   - "420 S. Fifth Avenue"
   - "West Reading, PA 19611"
 direction_url: '#'
-phones:
-  - label: Main
-    number: "484-555-5555"
-  - label: Fax
-    number: "484-555-5556"
+phone: "484-555-5555"
+fax: "484-555-5556"
 cta:
   url: "#"
   label: "Other Doctors at this Location"
