Add ability to set resource list to be full width.

--- a/config/sites/default/core.entity_form_display.paragraph.resource_list_card.default.yml
+++ b/config/sites/default/core.entity_form_display.paragraph.resource_list_card.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.resource_list_card.field_resource_list_desc
+    - field.field.paragraph.resource_list_card.field_resource_list_full
     - field.field.paragraph.resource_list_card.field_resource_list_items
     - field.field.paragraph.resource_list_card.field_resource_list_title
     - paragraphs.paragraphs_type.resource_list_card
@@ -16,16 +17,22 @@ bundle: resource_list_card
 mode: default
 content:
   field_resource_list_desc:
-    weight: 1
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
     region: content
+  field_resource_list_full:
+    weight: 1
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_resource_list_items:
     type: entity_reference_paragraphs
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
