--- a/config/sites/default/core.entity_view_display.paragraph.resource_list_card.default.yml
+++ b/config/sites/default/core.entity_view_display.paragraph.resource_list_card.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.resource_list_card.field_resource_list_desc
+    - field.field.paragraph.resource_list_card.field_resource_list_full
     - field.field.paragraph.resource_list_card.field_resource_list_items
     - field.field.paragraph.resource_list_card.field_resource_list_title
     - paragraphs.paragraphs_type.resource_list_card
@@ -40,4 +41,5 @@ content:
     type: string
     region: content
 hidden:
+  field_resource_list_full: true
   search_api_excerpt: true
