--- a/config/sites/default/field.field.node.service.field_service_flex.yml
+++ b/config/sites/default/field.field.node.service.field_service_flex.yml
@@ -13,6 +13,7 @@ dependencies:
     - paragraphs.paragraphs_type.image_teaser_banner
     - paragraphs.paragraphs_type.patient_story
     - paragraphs.paragraphs_type.recognition_cards
+    - paragraphs.paragraphs_type.resource_list_card
     - paragraphs.paragraphs_type.rich_text
     - paragraphs.paragraphs_type.text_teaser_banner
   module:
@@ -36,12 +37,13 @@ settings:
       patient_story: patient_story
       recognition_cards: recognition_cards
       anchored_cta_block: anchored_cta_block
-      box_links: box_links
       care_circle: care_circle
+      box_links: box_links
       file_download_cta: file_download_cta
       rich_text: rich_text
       image_teaser_banner: image_teaser_banner
       text_teaser_banner: text_teaser_banner
+      resource_list_card: resource_list_card
     target_bundles_drag_drop:
       card:
         weight: -13
@@ -118,10 +120,19 @@ settings:
       image_teaser_banner:
         enabled: true
         weight: 41
+      form:
+        weight: 43
+        enabled: false
       text_teaser_banner:
         enabled: true
         weight: 49
       video_card:
         weight: 50
+        enabled: false
+      resource_list_card:
+        enabled: true
+        weight: 55
+      resource_list_item:
+        weight: 56
         enabled: false
 field_type: entity_reference_revisions
