--- a/config/sites/default/field.field.paragraph.recognition_card.field_recog_card_description.yml
+++ b/config/sites/default/field.field.paragraph.recognition_card.field_recog_card_description.yml
@@ -10,7 +10,7 @@ field_name: field_recog_card_description
 entity_type: paragraph
 bundle: recognition_card
 label: Description
-description: 'Recommend less that 100 characters. Will not display if an image is added.'
+description: 'Recommend less than 100 characters. Will display even if an image is added.'
 required: false
 translatable: false
 default_value: {  }
