--- a/config/sites/default/field.field.node.service.field_service_header.yml
+++ b/config/sites/default/field.field.node.service.field_service_header.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_service_header
     - node.type.service
     - paragraphs.paragraphs_type.basic_header
+    - paragraphs.paragraphs_type.large_hero
   module:
     - entity_reference_revisions
 id: node.service.field_service_header
@@ -24,6 +25,7 @@ settings:
     negate: 0
     target_bundles:
       basic_header: basic_header
+      large_hero: large_hero
     target_bundles_drag_drop:
       article_card:
         weight: 18
@@ -70,10 +72,52 @@ settings:
       recognition_cards:
         weight: 32
         enabled: false
+      anchored_cta_block:
+        weight: 32
+        enabled: false
       rich_text:
         weight: 33
         enabled: false
       sidebar_card:
         weight: 34
+        enabled: false
+      box_links:
+        weight: 35
+        enabled: false
+      care_circle:
+        weight: 38
+        enabled: false
+      care_circle_section:
+        weight: 39
+        enabled: false
+      file_download_cta:
+        weight: 43
+        enabled: false
+      form:
+        weight: 44
+        enabled: false
+      image_box_link_custom:
+        weight: 48
+        enabled: false
+      image_box_link_reference:
+        weight: 49
+        enabled: false
+      image_teaser_banner:
+        weight: 50
+        enabled: false
+      large_hero:
+        enabled: true
+        weight: 51
+      resource_list_card:
+        weight: 57
+        enabled: false
+      resource_list_item:
+        weight: 58
+        enabled: false
+      text_teaser_banner:
+        weight: 61
+        enabled: false
+      video_card:
+        weight: 62
         enabled: false
 field_type: entity_reference_revisions
