--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,23 @@
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "ckeditor/templates",
+                "type": "drupal-library",
+                "version": "4.11.0",
+                "dist": {
+                    "type": "zip",
+                    "url": "https://download.ckeditor.com/templates/releases/templates_4.14.0.zip",
+                    "reference": "master"
+                }
+            }
         }
     ],
     "require": {
+        "ckeditor/templates": "^4.11",
         "composer/installers": "^1.0",
         "cweagans/composer-patches": "^1.6",
         "drupal-pattern-lab/add-attributes-twig-extension": "^1.0",
@@ -39,6 +53,7 @@
         "drupal/better_exposed_filters": "^3.0",
         "drupal/bigmenu": "^1.0@alpha",
         "drupal/block_visibility_conditions": "^1.0@beta",
+        "drupal/ckeditor_templates": "^1.1",
         "drupal/components": "^1.1",
         "drupal/config_installer": "^1.8",
         "drupal/config_split": "^1.4",
@@ -88,6 +103,7 @@
         "drupal/workbench_access": "^1.0@beta",
         "drupal/workbench_menu_access": "^1.1",
         "drupal/workbench_tabs": "^1.3",
+        "drupal/wysiwyg_template": "^2.3",
         "flow/jsonpath": "^0.4.0",
         "sainsburys/guzzle-oauth2-plugin": "^3.0"
     },
@@ -118,7 +134,8 @@
             "docroot/modules/contrib/{$name}": ["type:drupal-module"],
             "docroot/profiles/contrib/{$name}": ["type:drupal-profile"],
             "docroot/themes/contrib/{$name}": ["type:drupal-theme"],
-            "drush/contrib/{$name}": ["type:drupal-drush"]
+            "drush/contrib/{$name}": ["type:drupal-drush"],
+            "docroot/libraries/{$name}": ["type:drupal-library"]
         },
         "drupal-scaffold": {
             "locations": {
