Add two layout template to full and basic html.

--- a/config/sites/default/editor.editor.basic_html.yml
+++ b/config/sites/default/editor.editor.basic_html.yml
@@ -40,6 +40,7 @@ settings:
           items:
             - Format
             - Styles
+            - TemplateSelector
         -
           name: Tools
           items:
