--- a/config/sites/default/editor.editor.full_html.yml
+++ b/config/sites/default/editor.editor.full_html.yml
@@ -46,6 +46,7 @@ settings:
           items:
             - Format
             - Styles
+            - TemplateSelector
         -
           name: Tools
           items:
