--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -113,6 +113,8 @@ module:
   workbench_access: 0
   workbench_tabs: 0
   workflows: 0
+  wysiwyg_template: 0
+  wysiwyg_template_core: 0
   menu_link_content: 1
   pathauto: 1
   views: 10
